小端序和大端序

--- a/操作系统真相.md
+++ b/操作系统真相.md
@@ -31,5 +31,14 @@
   * windows下，PE格式
 * 操作系统的API系统调用不同。
 
+#### 大端序和小端序
+
+* 小端序
+  * 高位在高地址，低位在低地址。
+  * 优势：强制转换数据类型时，不需要重新调整字节（原则是增加高位和丢弃高位）。比如：0x12345678转为short变为0x5678
+* 大端序
+  * 高位在低地址，低位在高地址。
+  * 优势：因为地址是从上往下延伸的，低地址->高地址。大端序在内存中的排列就是0x12345678，而小端序是0x78563412.
+
 
 
